[bdist_wheel]
universal = 1

[metadata]
name = yace-sea-lang
version = attr: yace.slang.__version__
author = Simon A. F. Lund
author_email = os@safl.dk
maintainer = Simon A. F. Lund
maintainer_email = os@safl.dk
description = The Sea Language -- An IDL for the C ABI and FFI interoperability
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPL-2.0
url = https://github.com/safl/sea-lang

classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Framework :: Pytest
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: GNU General Public License v2 (GPLv2)
  Programming Language :: Python
  Topic :: Software Development :: Testing
  Topic :: Software Development
  Topic :: Text Processing
  Topic :: Utilities

[options]
requires_python = >=3.7
setup_requires =
  wheel
install_requires =
  setuptools>=60

zip_safe = False
packages = find_namespace:
package_dir =
  = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  slang = yace.slang.cli:main
